fix:set balance align left

--- a/packages/neuron-ui/src/components/MultisigAddress/multisig-address.module.scss
+++ b/packages/neuron-ui/src/components/MultisigAddress/multisig-address.module.scss
@@ -43,6 +43,10 @@
       min-width: 40px;
       text-align: center;
     }
+
+    .balance {
+      text-align: left;
+    }
   }
 
   .fullPayload {
